# sonya

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  GEMINI.md  LICENSE  README.ko.md  README.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini
.opencode/agents/: commit-message-writer-gemini.md  markdown-writer-gemini.md  readme-manager.md  sonya-build.md  sonya-review.md
.opencode/commands/: readme-sync.md  sonya-context.md  sonya-test.md  sonya-tool.md
.opencode/skills/readme-maintenance/: SKILL.md
_archive/sonya-agent/: README.md
_archive/sonya-agent/src/sonya/agent/: __init__.py
_archive/tests/: test_extensions.py  test_llm_client.py  test_openai_client.py  test_runtime.py
deploy/cloud-run/: .dockerignore  Dockerfile
docs/plans/: 2026-03-05-cache-module-design.md  2026-03-05-cache-module-plan.md  2026-03-05-context-routing-design.md  2026-03-05-context-routing-plan.md  2026-03-06-memory-hierarchy-design.md  2026-03-06-memory-hierarchy-plan.md  2026-03-06-sonya-extension-design.md  2026-03-09-gateway-design.md  2026-03-09-permission-desktop-design.md  2026-03-09-pip-install-sonya-design.md  2026-03-09-pip-install-sonya-plan.md  2026-03-10-permission-desktop-plan.md  2026-03-10-web-gui-design.md  2026-03-10-web-gui-plan.md  2026-03-11-memory-pipeline-design.md  2026-03-11-memory-pipeline-plan.md  2026-03-11-prompt-builder-design.md  2026-03-11-prompt-builder-plan.md
docs/reports/: 2026-03-05-context-routing-verification.md
src/sonya-core/: README.md  __init__.py  logging.py  requirements.txt
src/sonya-core/llm/: __init__.py  base.py  models.py
src/sonya-core/llm/client/: __init__.py  anthropic.py  google.py  openai.py
src/sonya-core/runtime/: __init__.py  agent.py
src/sonya-core/tools/: __init__.py  base.py  error.py
tests/: test_extensions.py  test_llm_client.py  test_llm_models.py  test_openai_client.py  test_runtime.py  test_tools.py
