[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonya-core"
version = "0.1.0"
description = "경량 범용 AI 에이전트 프레임워크"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sonya_core*"]

[tool.setuptools.package-dir]
sonya_core = "sonya-core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
